examples/test/testpolicy4260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4260
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value44
          key22: value12
      podSelector:
        matchLabels:
          key39: value24
          key29: value7
          key48: value35
